--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,9 +34,10 @@ ul {
 li {
     display: inline;
     margin: 6vw;
+    transition: opacity 0.5s;
 }
 li:hover {
-    opacity: .7;
+    opacity: 0.7;
     cursor: pointer;
 }
 li:active {
