--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,63 +1,119 @@
+* {
+  margin: 0;
+}
 body {
-    display: flexbox;
-    width:100vw ;
-    font-family: 'Lato', sans-serif;
-    font-family: 'Noto Sans', sans-serif;
-
+  display: flexbox;
+  width: 100vw;
+  font-family: "Lato", sans-serif;
+  font-family: "Noto Sans", sans-serif;
+  margin: 0;
 }
 header {
-    width:100%;
-    text-align:center;
-    background-color: turquoise;
-    margin: 0%;
-    
+  width: 100 vw;
+  text-align: center;
+  background-color: turquoise;
+  margin: 0%;
 }
-#photo {
-    display:inline-block;
-    margin: 2%;
+header > .logo {
+  display: inline-block;
+  margin: 2%;
+  height: 20vh;
 }
 nav {
-    display: flex;
-    /*background-color:floralwhite;*/
-    align-items: center;
-   justify-content: space-between;
-    
+  display: flex;
+  /*background-color:floralwhite;*/
+  align-items: center;
+  justify-content: space-between;
 }
 ul {
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-  }
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+}
 li {
-    display: inline;
-    margin: 6vw;
-    transition: opacity 0.5s;
+  display: inline;
+  margin: 6vw;
 }
 li:hover {
-    opacity: 0.7;
-    cursor: pointer;
+  opacity: 0.65;
+  cursor: pointer;
+  transition: all 0.1s;
 }
 li:active {
-    opacity: .5;
+  opacity: 0.5;
+  box-shadow: 3vw 3vw red, -1em 0 0.4em olive;
 }
 
 @media (max-width: 640px) {
-    body {
-      text-align: center;
-    }
-  
-    body nav {
-      flex-direction: column;
-    }
-  
-    nav ul {
-      flex-direction: column;
-    }
-  
-    nav li {
-      margin: 0.8vh 0;
-    }
+  body {
+    text-align: center;
   }
+
+  body nav {
+    flex-direction: column;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav li {
+    margin: 0.8vh 0;
+  }
+}
+main {
+  display: flexbox;
+  width: 100vw;
+  background-color: rgb(246, 209, 209);
+}
+.banner {
+  width: 100 vw;
+  flex-direction: row;
+  padding: 4vh;
+  /* margin-left: 5vw; */
+  /* margin-right: 5vw; */
+}
+.banner-title {
+    margin-bottom: ;
+}
+.content-article {
+  width: 25 vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  flex-basis: 0;
+}
+.content-article-text {
+  padding: 0 2vw;
+}
+.content-wrapper {
+  width: auto;
+  max-width: 100vw;
+  /* margin: auto; */
+  display: flex;
+  justify-content: space-evenly;
+}
+h1 {
+  /* display: block; */
+  text-align: center;
+  /* margin-bottom: 5vw; */
+}
+.content-wrapper > .content-article {
+  font-size: 1.4vw;
+  /*display: table-cell;*/
+}
+.content-wrapper > .content-article h1 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  /* margin-bottom: 10px; */
+  /* margin-left: 75px; */
+}
+.content-wrapper > .content-article p {
+  line-height: 25px;
+  font-family: "Open Sans", sans-serif;
+  /* margin-left: 75px;  */
+}
