--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 }
 body {
   display: flexbox;
-  width: 100vw;
+  max-width: 100vw;
   font-family: "Lato", sans-serif;
   font-family: "Noto Sans", sans-serif;
   margin: 0;
@@ -24,10 +24,12 @@ nav {
   /*background-color:floralwhite;*/
   align-items: center;
   justify-content: space-between;
+  font-size: 4vh;
+  width: 100%;
 }
 ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -47,23 +49,6 @@ li:active {
   box-shadow: 3vw 3vw red, -1em 0 0.4em olive;
 }
 
-@media (max-width: 640px) {
-  body {
-    text-align: center;
-  }
-
-  body nav {
-    flex-direction: column;
-  }
-
-  nav ul {
-    flex-direction: column;
-  }
-
-  nav li {
-    margin: 0.8vh 0;
-  }
-}
 main {
   display: flexbox;
   width: 100vw;
@@ -73,11 +58,27 @@ main {
   width: 100 vw;
   flex-direction: row;
   padding: 4vh;
+  text-align: center;
+  font-size: 5vh;
+ 
   /* margin-left: 5vw; */
   /* margin-right: 5vw; */
+  
+}
+
+.banner .click:hover {
+ letter-spacing: 3.2vh;
+ transition: all 0.9s;
+ cursor: pointer;
+}
+.banner .click:active {
+    opacity: .5;
 }
 .banner-title {
-    margin-bottom: ;
+    margin-bottom: 2vh;
+}
+.banner p {
+    margin-bottom: 3vh;
 }
 .content-article {
   width: 25 vw;
@@ -86,16 +87,27 @@ main {
   justify-content: center;
   flex-grow: 1;
   flex-basis: 0;
+  align-items: center
 }
+.content-article :hover {
+    /* background-color:rgb(252, 252, 204) ; */
+    /box-shadow: .2vh .1vw black, -.2vh -.1vw black; 
+    }
 .content-article-text {
   padding: 0 2vw;
+  text-align: center;
 }
+
 .content-wrapper {
   width: auto;
   max-width: 100vw;
   /* margin: auto; */
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  align-items: flex-start;
+  background-color: lightyellow;
+  padding: 4vw;
 }
 h1 {
   /* display: block; */
@@ -107,13 +119,92 @@ h1 {
   /*display: table-cell;*/
 }
 .content-wrapper > .content-article h1 {
-  font-family: "Open Sans", sans-serif;
-  font-size: 20px;
+  margin-bottom: 2vh;
   /* margin-bottom: 10px; */
   /* margin-left: 75px; */
+  text-decoration: underline;
 }
 .content-wrapper > .content-article p {
-  line-height: 25px;
-  font-family: "Open Sans", sans-serif;
-  /* margin-left: 75px;  */
+  line-height: 3vh;
+  /* color: rgb(137, 40, 40); */
+  font-weight: bolder; 
+  font-size: 2vh;
+  letter-spacing: .05vh;
+  
+}
+.content-wrapper > .content-article > .logo {
+    display: inline;
+    width: 4vw;
+    padding: 2vh
+    
+    
+}  
+@media screen and (max-width: 700px) {
+    body {
+      text-align: center;
+    }
+  
+    body nav {
+      flex-direction: column;
+      display: flex;
+    }
+  
+    nav ul {
+      flex-direction: column;
+      display: flex;
+    }
+  
+    nav li {
+      margin: 0.8vh 0;
+    }
+    body main {
+      flex-direction: column;
+      display: flex;
+    }
+    main section {
+      flex-direction: column;
+      display: flex;
+    }
+    artical section article {
+      flex-direction: column;
+      display: flex;
+    }
+    artical section article .logo{
+      flex-direction: column;
+      display: flex;}
+      .content-wrapper > .content-article > .logo {
+        display: inline;
+        width: 25vh;
+        padding: 2vh;
+    }
+    .content-wrapper > .content-article h1 {
+        font-size: 4vh;
+  }
+  .content-article {
+    width: 25 vw;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-basis: 0;
+    border: solid;
+    padding: 5vh;
+    align-items: center;
+} 
+.banner {
+    display: block;
+    width: 100 vw;
+    flex-direction: row;
+    padding: 4vh;
+    text-align: center;
+    font-size: 5vh;
+    /* margin-left: 5vw; */
+    /* margin-right: 5vw; */
+}
+li {
+    display: inline;
+    margin: 6vw;
+    padding: 3vh;
+}
+{
+
 }
