--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,7 @@ header {
   text-align: center;
   background-color: turquoise;
   margin: 0%;
+  border-style: ridge;
 }
 header > .logo {
   display: inline-block;
@@ -26,6 +27,7 @@ nav {
   justify-content: space-between;
   font-size: 4vh;
   width: 100%;
+  border-style: ridge;
 }
 ul {
   display: flex;
@@ -60,6 +62,7 @@ main {
   padding: 4vh;
   text-align: center;
   font-size: 5vh;
+  border-style: ridge;
  
   /* margin-left: 5vw; */
   /* margin-right: 5vw; */
@@ -108,6 +111,7 @@ main {
   align-items: flex-start;
   background-color: lightyellow;
   padding: 4vw;
+  border-style: ridge;
 }
 h1 {
   /* display: block; */
@@ -136,9 +140,34 @@ h1 {
     display: inline;
     width: 4vw;
     padding: 2vh
+}
+footer > .footer-wrap{
+display: flex;
+}
+footer div .logo {
+    display:inline-block;
+    height: 6vh;
+    filter: brightness(50%)
+}
+footer > .footer-wrap {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: center;
+    background-color: rgb(224, 255, 233);
+    padding: 3vh;
+    border-style: ridge;
+}
+footer div p {
+    color: rgb(108, 108, 108);
+    font-size: 2vh;
+}
     
-    
-}  
+
+
+
+
 @media screen and (max-width: 700px) {
     body {
       text-align: center;
