--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,6 +28,7 @@ nav {
   font-size: 4vh;
   width: 100%;
   border-style: ridge;
+
 }
 ul {
   display: flex;
@@ -37,9 +38,14 @@ ul {
   padding: 0;
   width: 100vw;
 }
+nav ul a {
+color: black;
+text-decoration: none;
+}
 li {
   display: inline;
   margin: 6vw;
+  
 }
 li:hover {
   opacity: 0.65;
